packages/kyvernoPolicies/chart/tests/vpol/disallow-auto-mount-service-account-token-cel-serviceaccounts/kyverno-test/resource.yaml
###### ServiceAccounts - Bad
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: badsa-automount-true
automountServiceAccountToken: true
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: badsa-automount-undefined
---
###### ServiceAccounts - Good
apiVersion: v1
kind: ServiceAccount
metadata:
  name: goodsa-automount-false
automountServiceAccountToken: false
